# cs535arch

./: .gitignore  Cargo.toml  README.md  Run-Simulation.ps1  TODO.md  example.toml  memtest.txt  results-10k.csv  results-1k.csv  results.extra.csv  sim-pipelined.toml  sim-unpipelined.toml  test.asm
benchmarks/: benchmarks.extra.toml  benchmarks.toml  exchange.asm  exchange.c  exchange.toml  mat2.txt  matrix.asm  matrix.c  matrix.toml
benchmarks/exchange/: exchange.asm  exchange.c
benchmarks/fpmatrix/: fpmatrix.asm  fpmatrix.toml
benchmarks/matrix/: mat1.txt  matrix.asm  output.txt
benchmarks/strexchange/: strcmp.asm  strexchange.asm
benchmarks/string exchange/: strexchange.toml
gui/: About.xaml  About.xaml.cs  App.xaml  MainWindow.xaml  MainWindow.xaml.cs  OkDialog.xaml  OkDialog.xaml.cs  PageSelector.xaml  PageSelector.xaml.cs  gui.csproj  gui.sln
gui/Controls/: CacheConfigurator.xaml  CacheConfigurator.xaml.cs  CacheView.xaml  CacheView.xaml.cs  DisassemblyView.xaml  DisassemblyView.xaml.cs  MemoryView.xaml  MemoryView.xaml.cs  Overview.xaml  Overview.xaml.cs  PipelineStageView.xaml  PipelineStageView.xaml.cs  PipelineView.xaml  PipelineView.xaml.cs  RegisterView.xaml  RegisterView.xaml.cs
gui/SimConfig/: CacheConfiguration.cs  Configurator.xaml  Configurator.xaml.cs
gui/SimData/: Cache.cs  Instruction.cs  Memory.cs  Pipeline.cs  Registers.cs
libasm/: Cargo.toml
libasm/src/: lib.rs
libasm/src/linker/: constants.rs  error.rs  labels.rs
libasm/src/parse/: asm.pest  asm_parser.rs  error.rs  mod.rs
libasm/src/parse/lines/: data.rs  mod.rs  register.rs
libasm/src/test/: mod.rs
libmem/: Cargo.toml
libmem/examples/: cli.rs
libmem/examples/cli/: cli.rs  interactive.rs  main.rs
libmem/examples/cli/interactive/: mod.rs
libmem/examples/cli/interactive/autocomplete/: mod.rs
libmem/src/: lib.rs
libmem/src/cache/: associative.rs  mapped_lru.rs  mod.rs  null.rs
libmem/src/cache/associative/: line.rs  mod.rs  multi.rs  single.rs
libmem/src/memory/: mod.rs
libmem/src/module/: mod.rs  single_level.rs
libmem/tests/: associative_cache.rs  mapped_lru.rs  memory.rs  null_cache.rs
libpipe/: Cargo.toml
libpipe/src/: lib.rs  piped.rs  reg_locks.rs  registers.rs  regmap.rs  serialize.rs  unpiped.rs
libpipe/src/stages/: decode.rs  execute.rs  fetch.rs  memory.rs  mod.rs  writeback.rs
libpipe/src/stages/execute/: tests.rs
libpipe/src/stages/execute/resolver/: control_ops.rs  float_ops.rs  integer_ops.rs  mod.rs  register_ops.rs
libseis/: Cargo.toml
libseis-macros/: Cargo.toml
libseis/src/: lib.rs  pages.rs  registers.rs  types.rs
libseis/src/instruction_set/: control.rs  error.rs  floating_point.rs  integer.rs  mod.rs  register.rs
libseis/src/types/: mod.rs
libser/: Cargo.toml
libser/src/: lib.rs
seis-asm/: Cargo.toml  readme.md
seis-asm/src/: main.rs
seis-asm/src/cli/: mod.rs
seis-asm/src/linker/: constants.rs  error.rs  mod.rs
seis-asm/src/parse/: asm.pest  error.rs  mod.rs
seis-asm/src/parse/lines/: data.rs  float.rs  integer.rs  mod.rs  register.rs
seis-asm/src/test/: mod.rs
seis-bench/: Cargo.toml
seis-bench/src/: bench.rs  cli.rs  config.rs  error.rs  main.rs  results.rs
seis-disasm/: Cargo.toml
seis-disasm/src/: main.rs
seis-sim/: Cargo.toml
seis-sim/src/: cli.rs  config.rs  main.rs
seis-sim/src/interface/: mod.rs
seis-sim/src/interface/backend/: cmd.rs  disassembly.rs  input.rs  mod.rs
seis-sim/src/interface/tui/: init.rs  mod.rs
seis-sim/src/interface/tui/ui/: cache.rs  events.rs  memory.rs  mod.rs  pipeline_stage.rs  registers.rs  render.rs
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  main.rs
server/src/api/: web.rs
server/src/api/app/: application.html  config.rs  mod.rs  read.rs  response.html
server/src/states/: mod.rs
server/src/states/runtimes/: mod.rs
server/web/: application.js  common.js  index.css  index.html  main.css  main.js  simulation.css
webapp/: Cargo.toml
webapp/src/: asm.rs  config.rs  lib.rs  regfp32.rs  stats.rs
