[package]
name = "libmem"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Santana"]
description = "A memory management library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libseis]
path = "../libseis"

[dev-dependencies.rand]
version = "0.8.5"

[dev-dependencies.rand_chacha]
version = "0.3.1"

[dev-dependencies.clap]
version = "4.5.2"
features = ["derive"]

[dev-dependencies.inquire]
version = "0.7.0"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.libser]
path = "../libser/"

[dev-dependencies.serde_json]
version = "1.0.114"
