[package]
name = "seis-asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libseis]
path = "../libseis/"

[dependencies.regex]
version = "1.10.3"

[dependencies.clap]
version = "4.5.1"
features = ["derive"]

[dependencies.pest]
version = "2.7.7"

[dependencies.pest_derive]
version = "2.7.7"
