[package]
name = "seis-bench"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Santana"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libseis]
path = "../libseis/"

[dependencies.libmem]
path = "../libmem/"

[dependencies.libpipe]
path = "../libpipe"

[dependencies.clap]
version = "4.5.2"
features = ["derive"]

[dependencies.crossterm]
version = "0.27.0"

[dependencies.serde]
version = "1.0.197"

[dependencies.toml]
version = "0.8.12"

[dependencies.rayon]
version = "1.10.0"
