[package]
name = "seis-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.5.2"
features = ["derive"]

[dependencies.serde]
version = "1.0.197"

[dependencies.serde_json]
version = "1.0.115"

[dependencies.toml]
version = "0.8.12"

[dependencies.libseis]
path = "../libseis/"

[dependencies.libmem]
path = "../libmem/"

[dependencies.libpipe]
path = "../libpipe/"
