[package]
name = "webapp"
version = "0.1.0"
authors = ["Francisco Santana"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde-wasm-bindgen = "^0.6.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.libseis]
path = "../libseis/"

[dependencies.libmem]
path = "../libmem/"

[dependencies.libpipe]
path = "../libpipe/"

[dependencies.libasm]
path = "../libasm/"

[dependencies.getrandom]
version = "^0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
